F&GDEV/src/objects/Interest_Crediting_Option__c.object
<CustomObject>
    <description>Object utilized for Product Development efforts</description>
    <fields>
        <fullName>Associated_Index__c</fullName>
        <label>Associated Index</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S&amp;P 500</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Dow Jones</fullName>
                </value>
                <value>
                    <fullName>DJREIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crediting_Strategy__c</fullName>
        <label>Crediting Strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Rate_Initial_Guar_Period__c</fullName>
        <label>Fixed Rate Initial Guar Period</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Rate_Renewal_Period__c</fullName>
        <label>Fixed Rate Renewal Period</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Maximum_Spread__c</fullName>
        <label>Guaranteed Maximum Spread</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Minimum_Cap__c</fullName>
        <label>Guaranteed Minimum Cap</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Minimum_Participation_Rate__c</fullName>
        <label>Guaranteed Minimum Participation Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Crediting_Frequency__c</fullName>
        <label>Interest Crediting Frequency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Crediting_Option__c</fullName>
        <label>Interest Crediting Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_Guaranteed_Interest__c</fullName>
        <label>Minimum Guaranteed Interest</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product_Specification__c</referenceTo>
        <relationshipLabel>Interest Crediting Options</relationshipLabel>
        <relationshipName>Interest_Crediting_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Strategy_Description__c</fullName>
        <label>Strategy Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Interest Crediting Option</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Product__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ICO-{0000}</displayFormat>
        <label>Interest Crediting Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interest Crediting Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>